# vglang

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/cotati/: Cargo.toml
crates/cotati-dsl/: Cargo.toml
crates/cotati/src/: device.rs  errors.rs  lib.rs  svg.rs
crates/cotati/src/dsl/: element.rs  mod.rs  text.rs
crates/cotati/src/ir/: animation.rs  compositing.rs  filter.rs  font.rs  ir.rs  mod.rs  painting.rs  path.rs  pattern.rs  text.rs  transform.rs
crates/derive/: Cargo.toml  README.md
crates/derive/src/: dsl.rs  ir.rs  lib.rs  parser.rs  semantic.rs  sexpr.rs
crates/derive/src/codegen/: ext.rs  mod.rs  opcode.rs
crates/derive/src/parser/: error.rs  field.rs  lit.rs  mod.rs  node.rs  utils.rs
crates/derive/src/sexpr/: attr.rs  container.rs  data.rs  element.rs  graphics.rs  item_enum.rs  item_struct.rs  mod.rs  shape.rs  stream.rs  tuple.rs
crates/derive/tests/: test_vglang.rs
crates/device/: Cargo.toml
crates/device/src/: lib.rs
crates/dsl/: Cargo.toml
crates/dsl/src/: generator.rs  lib.rs
crates/dsl/src/drawing/: drawing.rs  layer.rs  mod.rs  painting.rs  shapes.rs  text.rs
crates/dsl/src/dsl/: dimension.rs  layer.rs  mod.rs  painting.rs  text.rs
crates/dsl/tests/: dsl.rs  text.rs
crates/ir/: Cargo.toml
crates/ir/src/: animation.rs  color.rs  compositing.rs  dimension.rs  errors.rs  filter.rs  font.rs  gradients.rs  ir.rs  layer.rs  lib.rs  painting.rs  primitives.rs  shapes.rs  text.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: analyzer.rs  ir.rs  lib.rs
crates/metadata/src/codegen/: binary.rs  ext.rs  mod.rs  opcode.rs  serde.rs  sexpr.rs  svg.rs
crates/metadata/src/compiler/: mod.rs
crates/metadata/src/compiler/codegen/: ext.rs  mod.rs  serde.rs  (+2 more)
crates/metadata/src/parser/: error.rs  field.rs  link.rs  lit.rs  node.rs  prop.rs  stat.rs  utils.rs
crates/metadata/tests/: test_vglang.rs
crates/ml/: Cargo.toml
crates/ml/src/: lib.rs
crates/ml/src/compiler/: ir.rs
crates/ml/src/lang/: analyzer.rs
crates/ml/src/rt/: mod.rs  opcode.rs  serde.rs
crates/ml/tests/: test_vglang.rs
crates/mlang/: Cargo.toml  LICENSE  vglang.ml
crates/mlang/src/: codegen.rs  lib.rs  opcode.rs  parser.rs  semantic.rs
crates/mlang/src/codegen/: codegen.rs  core.rs  ext.rs  mod.rs  opcode.rs  parserc.rs  sexpr.rs
crates/mlang/src/lang/: analyzer.rs  ir.rs  mod.rs
crates/mlang/src/rt/: mod.rs  opcode.rs  sexpr.rs
crates/mlang/src/tests/: enum.ml  node.ml
crates/mlang/tests/: test_vglang.rs  vglang.json  vglang.ml
crates/opcode/: Cargo.toml
crates/opcode/src/: lib.rs  opcode.rs  sexpr.rs  variable.rs
crates/opcode/src/attrs/: attrs.rs  mod.rs  painting.rs
crates/opcode/src/binary/: mod.rs
crates/opcode/src/data/: basic_types.rs  data.rs  map_collect.rs  mod.rs  painting.rs  text.rs
crates/opcode/src/el/: el.rs  group.rs  mod.rs  text.rs
crates/opcode/src/instruction/: mod.rs
crates/opcode/src/operand/: angle.rs  canvas.rs  color.rs  compositing.rs  coords.rs  defs.rs  filter.rs  font.rs  gradients.rs  iri.rs  length.rs  mod.rs  num.rs  painting.rs  path.rs  pattern.rs  point.rs  shapes.rs  text.rs  transform.rs  value.rs  variable.rs
crates/opcode/src/table/: mod.rs  value.rs
crates/parserc/: Cargo.toml  LICENSE  README.md
crates/parserc/src/: context.rs  errors.rs  input.rs  lib.rs  parser.rs  source.rs  token.rs
crates/sexpr/: Cargo.toml
crates/sexpr/src/: canvas.rs  compositing.rs  container.rs  defs.rs  drawing.rs  gradients.rs  graphics.rs  length.rs  lib.rs  painting.rs  path.rs  pattern.rs  shape.rs  shapes.rs  text.rs  transform.rs
crates/sexpr/src/expr/: control_flow.rs  expr.rs  math.rs  mod.rs  s_control_flow.rs  s_expr.rs  s_variable.rs  variable.rs
crates/sexpr/tests/: compositing.rs  coords.rs  gradient.rs  gradient_pattern.rs  path.rs  sexpr.rs  shapes.rs  svg.rs  tester.rs  text.rs
crates/spec/: Cargo.toml
crates/spec/benches/: svg.rs
crates/spec/spec/compositing/: mask_01.json  mask_01.vgb  opacity_01.json  opacity_01.vgb
crates/spec/spec/filter/: enable_background_01.json  enable_background_01.vgb  fe_component_transfer_01.json  fe_component_transfer_01.vgb  feblend_01.json  feblend_01.vgb  fecolormatrix_01.json  fecolormatrix_01.vgb
crates/spec/spec/gradients/: lingrad_01.json  lingrad_01.vgb  radgrad_01.json  radgrad_01.vgb
crates/spec/spec/path/: arcs_01.json  arcs_01.vgb  cubic_01.json  cubic_01.vgb  quad_01.json  quad_01.vgb  triangle_01.json  triangle_01.vgb
crates/spec/spec/pattern/: pattern_01.json  pattern_01.vgb
crates/spec/spec/shapes/: ellipse_01.json  ellipse_01.vgb  line_01.json  line_01.vgb  polygon_01.json  polygon_01.vgb  polyline_01.json  polyline_01.vgb  rect_01.json  rect_01.vgb  rect_02.json  rect_02.vgb
crates/spec/spec/text/: rtl_text.json  rtl_text.vgb  text_0_1.json  text_0_1.vgb  text_decoration_01.json  text_decoration_01.vgb  toap_01.json  toap_01.vgb  tspan_0_1.json  tspan_0_1.vgb  tspan_0_2.json  tspan_0_2.vgb  tspan_0_3.json  tspan_0_3.vgb  tspan_0_4.json  tspan_0_4.vgb  tspan_0_5.json  tspan_0_5.vgb
crates/spec/src/: compositing.rs  filter.rs  gradients.rs  lib.rs  path.rs  pattern.rs  shapes.rs  text.rs
crates/spec/tests/: spec.rs
crates/svg/: Cargo.toml
crates/svg/src/: attr.rs  element.rs  errors.rs  lib.rs  renderer.rs  surface.rs  variable.rs
crates/svg/tests/: test_spec.rs
crates/vglang/: Cargo.toml  build.rs  build.rs~  vglang.ml
crates/vglang/benches/: color.rs  num.rs
crates/vglang/spec/: mask_01.vg
crates/vglang/src/: lib.rs  manual.rs  ml.rs  opcode.rs  sexpr.rs  surface.rs
crates/vglang/src/codegen/: mod.rs  opcode.rs  serde.rs  sexpr.rs  svg.rs
crates/vglang/src/encoding/: mod.rs
crates/vglang/src/lang/: ir.rs  mod.rs
crates/vglang/src/ml/: mod.rs  opcode.rs  serde.rs  sexpr.rs
crates/vglang/src/opcode/: opcode.rs  variable.rs
crates/vglang/src/sexpr/: apply_to.rs  content_of.rs  context.rs  el.rs  graphics.rs  length.rs  map_collect.rs  mod.rs  path.rs  shape.rs  transform.rs
crates/vglang/src/svg/: mod.rs  surface.rs  writer.rs
crates/vglang/tests/: sexpr.rs  test_parser.rs
(+122 files in other folders)
