[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/hala-graphics"
version = "0.1.2"

[workspace.dependencies]
thiserror = "^2.0"
log = "^0.4"
pretty_env_logger = "^0.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
bson = "2.13.0"
#futures
futures = "^0.3"
futures-test = "^0.3"
clap = "^4.5"
divan = "0.1.14"
quote = "^1"
heck = "^0.5"
syn = "^2"
nom = "^7.1"
xml_dom = "^0.2"
xml-builder = "0.5.3"
oxilangtag = "0.1.5"
bitmask-enum = "2.2.5"
proc-macro2 = "^1"
num = "0.4.3"
concat-idents = "1.1.5"
impl-trait-for-tuples = "0.2.3"
# sub-crates
vglang-derive = { path = "./crates/derive", version = "^0.1", default-features = false }
vglang = { path = "./crates/vglang", version = "^0.1", default-features = false }
vglang-spec = { path = "./crates/spec", version = "^0.1", default-features = false }
vglang-svg = { path = "./crates/svg", version = "^0.1", default-features = false }
