[workspace]
members = ["crates/ml", "crates/parserc"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/vglang/vglang"
version = "0.1.2"

[workspace.dependencies]
anyhow = "1.0.95"
bson = "2.13.0"
log = "^0.4"
pretty_env_logger = "^0.5"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
thiserror = "^2.0"
#futures
bitmask-enum = "2.2.5"
clap = "^4.5"
compute-float = "0.1.0"
concat-idents = "1.1.5"
divan = "0.1.14"
futures = "^0.3"
futures-test = "^0.3"
heck = "^0.5"
num = "0.4.3"
oxilangtag = "0.1.5"
proc-macro2 = "^1"
quote = "^1"
syn = "^2"
varint-rs = "2.2.0"
wasm-bindgen = "0.2.99"
xml-builder = "0.5.3"
xml_dom = "^0.2"
# sub-crates
ml = {path = "./crates/ml", version = "^0.1", default-features = false}
parserc = {path = "./crates/parserc", version = "^0.1", default-features = false}
vglang = {path = "./crates/vglang", version = "^0.1", default-features = false}
vglang-derive = {path = "./crates/derive", version = "^0.1", default-features = false}
