[package]
description = "cotati is a general-purpose VGL(vector graphics language) system"
documentation = "https://docs.rs/cotati"
edition.workspace = true
license = "MIT"
name = "cotati"
repository = "https://github.com/HalaOS/hala-graphics.git"
version.workspace = true

[dependencies]
cotati-ir = { workspace = true, optional = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
divan = { workspace = true }

[features]
default = ["serde", "ir"]
serde = ["cotati-ir/serde"]
ir = []
