[package]
description = "proc-macros for other vglang crates."
documentation = "https://docs.rs/vglang-derive"
edition.workspace = true
license = "MIT"
name = "vglang-derive"
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[features]
dsl = []
