[package]
description = "proc-macros for vglang"
documentation = "https://docs.rs/vglang-derive"
edition.workspace = true
license = "MIT"
name = "vglang-derive"
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }