[package]
description = "proc-macros for vglang"
documentation = "https://docs.rs/vglang-derive"
edition.workspace = true
license = "MIT"
name = "vglang-derive"
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true, features = ["full"]}
