[package]
description = "Provides the render target abstract for vglang."
documentation = "https://docs.rs/vglang-device"
edition.workspace = true
license = "MIT"
name = "vglang-device"
repository.workspace = true
version.workspace = true

[dependencies]
futures = { workspace = true }
vglang-ir = { workspace = true }
