[package]
description = "Rust domain specific language for vglang"
documentation = "https://docs.rs/vglang-dsl"
edition.workspace = true
license = "MIT"
name = "vglang-dsl"
repository.workspace = true
version.workspace = true

[dependencies]
vglang-ir = { workspace = true, features = ["dsl"] }
vglang-device = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
vglang-svg = { workspace = true }
divan = { workspace = true }
futures-test = { workspace = true }
heck = { workspace = true }

[features]
default = ["serde"]
serde = ["vglang-ir/serde"]
