[package]
description = "The intermediate representation (IR) of vglang."
documentation = "https://docs.rs/vglang-ir"
edition.workspace = true
license = "MIT"
name = "vglang-ir"
repository.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
oxilangtag = { workspace = true }
bitmask-enum = { workspace = true }
serde = { workspace = true, optional = true }
vglang-derive = { workspace = true, optional = true }

[features]
default = ["serde", "dsl"]
serde = ["dep:serde"]
dsl = ["vglang-derive/dsl"]
