[package]
description = "metadata tools for vglang."
documentation = "https://docs.rs/vglang-metadata"
edition.workspace = true
license = "MIT"
name = "vglang-metadata"
repository.workspace = true
version.workspace = true

[dependencies]
log = {workspace = true}
parserc = {workspace = true}
thiserror = {workspace = true}

heck = {workspace = true, optional = true}
proc-macro2 = {workspace = true, optional = true}
quote = {workspace = true, optional = true}
serde = {workspace = true, optional = true}

[dev-dependencies]
serde_json = {workspace = true}

[features]
codegen = ["quote", "proc-macro2", "heck"]
default = ["serde", "codegen"]
serde = ["dep:serde", "parserc/serde"]
