[package]
description = "markup language metadata tool."
documentation = "https://docs.rs/ml"
edition.workspace = true
license = "MIT"
name = "ml"
repository.workspace = true
version.workspace = true

[dependencies]
log = {workspace = true}
parserc = {workspace = true}
thiserror = {workspace = true}

heck = {workspace = true, optional = true}
proc-macro2 = {workspace = true, optional = true}
quote = {workspace = true, optional = true}
serde = {workspace = true, optional = true}

[dev-dependencies]
serde_json = {workspace = true}

[features]
compiler = ["quote", "proc-macro2", "heck"]
opcode = []
rt = []
serde = ["dep:serde", "parserc/serde"]
sexpr = []
