[package]
description = "`mlang` is a programming language to define declarative programming language."
documentation = "https://docs.rs/vglang"
license = "MIT"
name = "mlang"
edition = "2021"
repository = "https://github.com/vglang/mlang"
version = "0.1.2"

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
parserc = { workspace = true }

quote= { workspace = true ,optional = true}
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde", "parserc/serde"]
codegen = ["quote"]