[package]
description = "`mlang` is a programming language to define declarative programming language."
documentation = "https://docs.rs/mlang"
license = "MIT"
name = "mlang"
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
parserc = { workspace = true }

quote= { workspace = true ,optional = true}
serde = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
heck= { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde", "parserc/serde"]
codegen = ["quote","proc-macro2","heck"]
