[package]
description = "markup language metadata tool."
documentation = "https://docs.rs/mlang"
edition.workspace = true
license = "MIT"
name = "mlang"
repository.workspace = true
version.workspace = true

[dependencies]
log = {workspace = true}
parserc = {workspace = true}
thiserror = {workspace = true}

heck = {workspace = true, optional = true}
proc-macro2 = {workspace = true, optional = true}
quote = {workspace = true, optional = true}
serde = {workspace = true, optional = true}

[dev-dependencies]
serde_json = {workspace = true}

[features]
default = ["lang", "serde", "rt", "rt_serde"]

lang = ["quote", "proc-macro2", "heck"]
serde = ["dep:serde", "parserc/serde"]

rt = []
rt_serde = []
