[package]
description = "low-level instructions for vglang executor"
documentation = "https://docs.rs/vglang-opcode"
license = "MIT"
name = "vglang-opcode"

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.version]
workspace = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.vglang-derive]
workspace = true
optional = true

[dependencies.num]
workspace = true

[features]
default = ["serde", "sexpr"]
serde = ["dep:serde"]
sexpr = ["vglang-derive/sexpr"]
