[package]
description = "low-level instructions for vglang executor"
documentation = "https://docs.rs/vglang-opcode"
license = "MIT"
name = "vglang-opcode"
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
