[package]
description = "Yet another rust parser combinator library."
documentation = "https://docs.rs/parserc"
license = "MIT"
name = "parserc"
edition = "2021"
repository = "https://github.com/vglang/parserc"
version = "0.1.2"

[dependencies]
thiserror = "^2.0"
log = "^0.4"

[dev-dependencies]

[features]
default = []
