[package]
description = "Yet another rust parser combinator library."
documentation = "https://docs.rs/parserc"
license = "MIT"
name = "parserc"
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
