[package]
description = "Rust sexpr implementation for vglang."
documentation = "https://docs.rs/vglang-sexpr"
edition.workspace = true
license = "MIT"
name = "vglang-sexpr"
repository.workspace = true
version.workspace = true

[dependencies]
vglang-opcode = { workspace = true, features = ["sexpr"] }
vglang-surface = { workspace = true }
thiserror = { workspace = true }
num = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
vglang-svg = { workspace = true }
divan = { workspace = true }
futures-test = { workspace = true }
heck = { workspace = true }
serde_json = { workspace = true }
bson = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }

[features]
default = ["serde"]
serde = ["vglang-opcode/serde"]
