[package]
description = "The svg target implemenation for vglang."
documentation = "https://docs.rs/vglang-svg"
edition.workspace = true
license = "MIT"
name = "vglang-svg"
repository.workspace = true
version.workspace = true

[dependencies]
vglang-opcode = { workspace = true }
vglang-targets = { workspace = true }
thiserror = { workspace = true }
xml_dom = { workspace = true }
