[package]
description = "The svg surface implemenation for vglang."
documentation = "https://docs.rs/vglang-svg"
edition.workspace = true
license = "MIT"
name = "vglang-svg"
repository.workspace = true
version.workspace = true

[dependencies]
vglang = { workspace = true }
thiserror = { workspace = true }
xml-builder = { workspace = true }

[dev-dependencies]
vglang-spec = { workspace = true }
futures = { workspace = true }
