[package]
description = "Simple and fast vector graphics language (vglang)"
documentation = "https://docs.rs/vglang"
edition.workspace = true
name = "vglang"
repository.workspace = true
version.workspace = true

[dependencies]
thiserror = {workspace = true}

heck = {workspace = true, optional = true}
log = {workspace = true, optional = true}
ml = {workspace = true, features = ["rt", "opcode"]}
parserc = {workspace = true, optional = true}
serde = {workspace = true, optional = true}
varint-rs = {workspace = true, optional = true}
xml-builder = {workspace = true, optional = true}
[build-dependencies]
ml = {workspace = true, features = ["compiler"]}

[dev-dependencies]
divan = {workspace = true}
nom = {workspace = true}

[features]
binary = ["varint-rs"]
serde = ["dep:serde", "parserc/serde", "ml/serde"]
sexpr = []
surface = []
svg = ["xml-builder", "heck", "log"]
