[package]
description = "Simple and fast vector graphics language (vglang)"
documentation = "https://docs.rs/vglang"
edition.workspace = true
name = "vglang"
repository.workspace = true
version.workspace = true

[dependencies]
thiserror = {workspace = true}

heck = {workspace = true, optional = true}
log = {workspace = true, optional = true}
mlang = {workspace = true, features = ["rt"]}
parserc = {workspace = true, optional = true}
serde = {workspace = true, optional = true}
varint-rs = {workspace = true, optional = true}
vglang-derive = {workspace = true, optional = true}
xml_dom = {workspace = true, optional = true}

[build-dependencies]
mlang = {workspace = true, features = ["lang"]}

[dev-dependencies]
divan = {workspace = true}

[features]
binary = ["varint-rs"]
serde = ["dep:serde", "parserc/serde", "mlang/serde"]
sexpr = ["vglang-derive"]
surface = []
svg = ["xml_dom", "heck", "log"]
